Fixed spacing in Education card

--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -3,6 +3,10 @@
   flex-direction: column;
 }
 
+.education-container {
+  margin-left: 15px;
+}
+
 .education-title {
   font-size: 1.2rem;
   font-weight: bold;
